<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/diffMod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF909090"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="20"
            android:textSize="18dip"
            android:text="Score : " />

        <TextView
            android:id="@+id/scoreResult"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="80"
            android:textSize="18dip"
            android:hint="@string/score_result" />

        <EditText
            android:id="@+id/playerName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:hint="@string/player_name" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:id="@+id/playerbutton"
            android:onClick="add"
            android:hint="@string/player_button" />

    </LinearLayout>
    
    <ListView
        android:id="@+id/scoresView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"/>


</LinearLayout>

